feat: add focus-trap-react to modal
Closes 36

--- a/docs/examples.mdx
+++ b/docs/examples.mdx
@@ -6,6 +6,7 @@ order: 2
 
 import Centered from './examples/centered';
 import Big from './examples/big';
+import FocusTrapped from './examples/focus-trapped';
 import Multiple from './examples/multiple';
 import CustomStyling from './examples/custom-styling';
 import CustomAnimation from './examples/custom-animation';
@@ -24,6 +25,10 @@ import CustomContainer from './examples/custom-container';
 ## Multiple modal
 
 <Multiple />
+
+## Focus Trapped modal
+
+<FocusTrapped />
 
 ## Custom styling
 
