--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -4,7 +4,7 @@ route: /
 order: 1
 ---
 
-import { PropsTable } from 'docz';
+import { Props } from 'docz';
 import Modal from '../src'
 
 # react-responsive-modal
@@ -66,7 +66,7 @@ ReactDOM.render(<App />, document.getElementById('app'));
 
 ## Props
 
-<PropsTable of={Modal} />
+<Props of={Modal} />
 
 ## License
 
