Upgrade docz to v1 (#312)
* Upgrade docz to v1

* Fix props table

* Update the examples to use playground and hooks

* prettier mdx

* Fix lint

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -4,8 +4,8 @@ route: /
 order: 1
 ---
 
-import { PropsTable } from 'docz';
-import Modal from '../src'
+import { Props } from 'docz';
+import Modal from '../src/modal.js';
 
 # react-responsive-modal
 
@@ -20,11 +20,11 @@ A simple responsive react modal compatible with React 15, 16 and ready for React
 
 With npm:
 
-```npm install react-responsive-modal --save```
+`npm install react-responsive-modal --save`
 
 Or with yarn:
 
-```yarn add react-responsive-modal```
+`yarn add react-responsive-modal`
 
 ## Usage
 
@@ -66,7 +66,7 @@ ReactDOM.render(<App />, document.getElementById('app'));
 
 ## Props
 
-<PropsTable of={Modal} />
+<Props of={Modal} />
 
 ## License
 
