--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -9,8 +9,9 @@ import Modal from '../src/modal.js';
 
 # react-responsive-modal
 
-A simple responsive react modal compatible with React 15, 16 and ready for React 17.
+A simple responsive and accessible react modal compatible with React 16 and ready for React 17.
 
+- Focus trap inside the modal.
 - Centered modals.
 - Scrolling modals.
 - Multiple modals.
