--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -5,7 +5,7 @@ order: 1
 ---
 
 import { Props } from 'docz';
-import Modal from '../src/modal.js';
+import { Modal } from '../src/index.tsx';
 
 # react-responsive-modal
 
