--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -15,6 +15,7 @@ A simple responsive and accessible react modal compatible with React 16 and read
 - Centered modals.
 - Scrolling modals.
 - Multiple modals.
+- Accessible modals.
 - Easily customizable via props.
 
 ## Installation
