--- a/docs/examples.mdx
+++ b/docs/examples.mdx
@@ -298,8 +298,9 @@ You can specify a custom close icon (svg, img..).
           closeIcon={closeIcon}
         >
           <p>
-            Take a look with the devtools, you can see that the modal is inside
-            the div we are targeting and not at the end of the body tag.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+            pulvinar risus non risus hendrerit venenatis. Pellentesque sit amet
+            hendrerit risus, sed porttitor quam.
           </p>
         </Modal>
       </>
