--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -35,7 +35,8 @@ Or with yarn:
 ```javascript
 import React from 'react';
 import ReactDOM from 'react-dom';
-import Modal from 'react-responsive-modal';
+import 'react-responsive-modal/styles.css';
+import { Modal } from 'react-responsive-modal';
 
 export default class App extends React.Component {
   state = {
