--- a/docs/examples.mdx
+++ b/docs/examples.mdx
@@ -5,6 +5,7 @@ order: 2
 ---
 
 import { Playground } from 'docz';
+import './docs.css';
 import '../src/styles.css';
 import { Modal } from '../src/index.tsx';
 
@@ -19,7 +20,7 @@ If you want your modal to be centered in the screen just pass the `center` prop.
     const [open, setOpen] = React.useState(false);
     return (
       <>
-        <button onClick={() => setOpen(true)}>Open centered modal</button>
+        <button className="button" onClick={() => setOpen(true)}>Open centered modal</button>
         <Modal open={open} onClose={() => setOpen(false)} center>
           <h2>Simple centered modal</h2>
           <p>
@@ -56,7 +57,7 @@ When a big modal is open, you can scroll the content of the modal but you will s
     );
     return (
       <>
-        <button onClick={() => setOpen(true)}>Open big modal</button>
+        <button className="button" onClick={() => setOpen(true)}>Open big modal</button>
         <Modal open={open} onClose={() => setOpen(false)}>
           <h2>Big modal</h2>
           {lorem}
@@ -89,11 +90,11 @@ When a big modal is open, you can scroll the content of the modal but you will s
     );
     return (
       <>
-        <button onClick={() => setOpenFirst(true)}>Open first modal</button>
+        <button className="button" onClick={() => setOpenFirst(true)}>Open first modal</button>
         <Modal open={openFirst} onClose={() => setOpenFirst(false)} center>
           <p>First modal</p>
           {littleLorem}
-          <button onClick={() => setOpenSecond(true)}>Open second modal</button>
+          <button className="button" onClick={() => setOpenSecond(true)}>Open second modal</button>
         </Modal>
         <Modal open={openSecond} onClose={() => setOpenSecond(false)} center>
           <p>Second modal</p>
@@ -113,7 +114,7 @@ By default, when the modal open, the first focusable element will be focused. Pr
     const [open, setOpen] = React.useState(false);
     return (
       <>
-        <button onClick={() => setOpen(true)}>Open modal</button>
+        <button className="button" onClick={() => setOpen(true)}>Open modal</button>
         <Modal open={open} onClose={() => setOpen(false)}>
           <h2>Try tabbing/shift-tabbing thru elements</h2>
           <form action="">
@@ -163,7 +164,7 @@ For example if you add the following css to your app you will get the following 
     const [open, setOpen] = React.useState(false);
     return (
       <>
-        <button onClick={() => setOpen(true)}>Open modal</button>
+        <button className="button" onClick={() => setOpen(true)}>Open modal</button>
         <Modal
           open={open}
           onClose={() => setOpen(false)}
@@ -218,7 +219,7 @@ For example if you add the following css to your app you will get the following 
     const [open, setOpen] = React.useState(false);
     return (
       <>
-        <button onClick={() => setOpen(true)}>Open modal</button>
+        <button className="button" onClick={() => setOpen(true)}>Open modal</button>
         <Modal
           open={open}
           onClose={() => setOpen(false)}
@@ -248,7 +249,7 @@ If you want to apply a custom animation to the modal body you can do like this:
     const [open, setOpen] = React.useState(false);
     return (
       <>
-        <button onClick={() => setOpen(true)}>Open modal</button>
+        <button className="button" onClick={() => setOpen(true)}>Open modal</button>
         <Modal
           open={open}
           onClose={() => setOpen(false)}
@@ -290,7 +291,7 @@ You can specify a custom close icon (svg, img..).
     );
     return (
       <>
-        <button onClick={() => setOpen(true)}>Open modal</button>
+        <button className="button" onClick={() => setOpen(true)}>Open modal</button>
         <Modal
           open={open}
           onClose={() => setOpen(false)}
@@ -319,7 +320,7 @@ By default, the modal will be rendered at the end of the html body tag. If you w
     return (
       <>
         <div ref={myRef} />
-        <button onClick={() => setOpen(true)}>Open modal</button>
+        <button className="button" onClick={() => setOpen(true)}>Open modal</button>
         <Modal
           open={open}
           onClose={() => setOpen(false)}
