--- a/docs/examples.mdx
+++ b/docs/examples.mdx
@@ -6,7 +6,7 @@ order: 2
 
 import { Playground } from 'docz';
 import './docs.css';
-import '../src/styles.css';
+import '../styles.css';
 import { Modal } from '../src/index.tsx';
 
 # Examples
