--- a/docs/examples.mdx
+++ b/docs/examples.mdx
@@ -5,22 +5,22 @@ order: 2
 ---
 
 import { Playground } from 'docz';
-import Modal from '../src';
+import './docs.css';
+import '../styles.css';
+import { Modal } from '../src/index.tsx';
 
 # Examples
 
 ## Centered modal
 
+If you want your modal to be centered in the screen just pass the `center` prop.
+
 <Playground>
   {() => {
     const [open, setOpen] = React.useState(false);
-
     return (
-      <div>
-        <button onClick={() => setOpen(true)}>
-          Open centered modal
-        </button>
-
+      <>
+        <button className="button" onClick={() => setOpen(true)}>Open centered modal</button>
         <Modal open={open} onClose={() => setOpen(false)} center>
           <h2>Simple centered modal</h2>
           <p>
@@ -29,19 +29,18 @@ import Modal from '../src';
             hendrerit risus, sed porttitor quam.
           </p>
         </Modal>
-      </div>
+      </>
     );
-
-}}
-
+  }}
 </Playground>
 
 ## Big modal
 
+When a big modal is open, you can scroll the content of the modal but you will see that the body scroll is locked until you actually close the modal.
+
 <Playground>
   {() => {
     const [open, setOpen] = React.useState(false);
-
     const lorem = (
       <p>
         Mauris ac arcu sit amet dui interdum bibendum a sed diam. Praesent
@@ -56,13 +55,9 @@ import Modal from '../src';
         aliquet justo vitae rutrum volutpat. Ut quis pulvinar est.
       </p>
     );
-
     return (
-      <div>
-        <button onClick={() => setOpen(true)}>
-          Open big modal
-        </button>
-
+      <>
+        <button className="button" onClick={() => setOpen(true)}>Open big modal</button>
         <Modal open={open} onClose={() => setOpen(false)}>
           <h2>Big modal</h2>
           {lorem}
@@ -71,12 +66,13 @@ import Modal from '../src';
           {lorem}
           {lorem}
           {lorem}
+          {lorem}
+          {lorem}
+          {lorem}
         </Modal>
-      </div>
+      </>
     );
-
-}}
-
+  }}
 </Playground>
 
 ## Multiple modal
@@ -85,7 +81,6 @@ import Modal from '../src';
   {() => {
     const [openFirst, setOpenFirst] = React.useState(false);
     const [openSecond, setOpenSecond] = React.useState(false);
-
     const littleLorem = (
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam pulvinar
@@ -93,45 +88,34 @@ import Modal from '../src';
         risus, sed porttitor quam.
       </p>
     );
-
     return (
-      <div>
-        <button onClick={() => setOpenFirst(true)}>
-          Open first modal
-        </button>
-
+      <>
+        <button className="button" onClick={() => setOpenFirst(true)}>Open first modal</button>
         <Modal open={openFirst} onClose={() => setOpenFirst(false)} center>
           <p>First modal</p>
           {littleLorem}
-          <button onClick={() => setOpenSecond(true)}>
-            Open second modal
-          </button>
+          <button className="button" onClick={() => setOpenSecond(true)}>Open second modal</button>
         </Modal>
-
         <Modal open={openSecond} onClose={() => setOpenSecond(false)} center>
           <p>Second modal</p>
           {littleLorem}
         </Modal>
-      </div>
+      </>
     );
-
-}}
-
+  }}
 </Playground>
 
 ## Focus Trapped modal
 
+By default, when the modal open, the first focusable element will be focused. Press Tab to navigate between the focusable elements in the modal. You can notice that when the modal is open, you can't focus the elements outside of it.
+
 <Playground>
   {() => {
     const [open, setOpen] = React.useState(false);
-
     return (
-      <div>
-        <button onClick={() => setOpen(true)}>
-          Open modal
-        </button>
-
-        <Modal open={open} onClose={() => setOpen(false)} focusTrapped>
+      <>
+        <button className="button" onClick={() => setOpen(true)}>Open modal</button>
+        <Modal open={open} onClose={() => setOpen(false)}>
           <h2>Try tabbing/shift-tabbing thru elements</h2>
           <form action="">
             <p>
@@ -150,34 +134,44 @@ import Modal from '../src';
             <input type="submit" value="Submit" />
           </form>
         </Modal>
-      </div>
+      </>
     );
-
-}}
-
+  }}
 </Playground>
 
-## Custom styling
+## Custom styling with css
 
-import customStyles from './examples/custom-styling.css';
+import './examples/custom-styling.css';
+
+It's really easy to add your own style to the modal.
+For example if you add the following css to your app you will get the following result:
+
+```css
+/* examples/custom-styling.css */
+.customOverlay {
+  background: rgba(36, 123, 160, 0.7);
+}
+.customModal {
+  background: #b2dbbf;
+  max-width: 500px;
+  width: 100%;
+}
+```
 
 <Playground>
   {() => {
+    // import './examples/custom-styling.css';
     const [open, setOpen] = React.useState(false);
-
     return (
-      <div>
-        <button onClick={() => setOpen(true)}>
-          Open modal
-        </button>
-
+      <>
+        <button className="button" onClick={() => setOpen(true)}>Open modal</button>
         <Modal
           open={open}
           onClose={() => setOpen(false)}
           center
           classNames={{
-            overlay: customStyles.customOverlay,
-            modal: customStyles.customModal,
+            overlay: 'customOverlay',
+            modal: 'customModal',
           }}
         >
           <p>
@@ -186,36 +180,53 @@ import customStyles from './examples/custom-styling.css';
             hendrerit risus, sed porttitor quam.
           </p>
         </Modal>
-      </div>
+      </>
     );
-
-}}
-
+  }}
 </Playground>
 
 ## Custom animation
 
-import customAnimationStyles from './examples/custom-animation.css';
+import './examples/custom-animation.css';
+
+If you want to change the default animation, you can do so by creating your own css animation.
+For example if you add the following css to your app you will get the following result:
+
+```css
+/* examples/custom-animation.css */
+@keyframes customEnterAnimation {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes customLeaveAnimation {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+```
 
 <Playground>
   {() => {
+    // import './examples/custom-animation.css';
     const [open, setOpen] = React.useState(false);
-
     return (
-      <div>
-        <button onClick={() => setOpen(true)}>
-          Open modal
-        </button>
-
+      <>
+        <button className="button" onClick={() => setOpen(true)}>Open modal</button>
         <Modal
           open={open}
           onClose={() => setOpen(false)}
           center
           classNames={{
-            transitionEnter: customAnimationStyles.transitionEnter,
-            transitionEnterActive: customAnimationStyles.transitionEnterActive,
-            transitionExit: customAnimationStyles.transitionExitActive,
-            transitionExitActive: customAnimationStyles.transitionExitActive,
+            animationIn: 'customEnterAnimation',
+            animationOut: 'customLeaveAnimation',
           }}
           animationDuration={1000}
         >
@@ -225,37 +236,103 @@ import customAnimationStyles from './examples/custom-animation.css';
             hendrerit risus, sed porttitor quam.
           </p>
         </Modal>
-      </div>
+      </>
     );
+  }}
+</Playground>
 
-}}
+If you want to apply a custom animation to the modal body you can do like this:
 
+<Playground>
+  {() => {
+    // import './examples/custom-animation.css';
+    const [open, setOpen] = React.useState(false);
+    return (
+      <>
+        <button className="button" onClick={() => setOpen(true)}>Open modal</button>
+        <Modal
+          open={open}
+          onClose={() => setOpen(false)}
+          center
+          styles={{
+            modal: {
+              animation: `${
+                open ? 'customEnterAnimation' : 'customLeaveAnimation'
+              } 500ms`,
+            },
+          }}
+        >
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+            pulvinar risus non risus hendrerit venenatis. Pellentesque sit amet
+            hendrerit risus, sed porttitor quam.
+          </p>
+        </Modal>
+      </>
+    );
+  }}
+</Playground>
+
+## Custom close icon
+
+You can specify a custom close icon (svg, img..).
+
+<Playground>
+  {() => {
+    const [open, setOpen] = React.useState(false);
+    const closeIcon = (
+      <svg fill="currentColor" viewBox="0 0 20 20" width={28} height={28}>
+        <path
+          fillRule="evenodd"
+          d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z"
+          clipRule="evenodd"
+        ></path>
+      </svg>
+    );
+    return (
+      <>
+        <button className="button" onClick={() => setOpen(true)}>Open modal</button>
+        <Modal
+          open={open}
+          onClose={() => setOpen(false)}
+          center
+          closeIcon={closeIcon}
+        >
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+            pulvinar risus non risus hendrerit venenatis. Pellentesque sit amet
+            hendrerit risus, sed porttitor quam.
+          </p>
+        </Modal>
+      </>
+    );
+  }}
 </Playground>
 
 ## Custom container
+
+By default, the modal will be rendered at the end of the html body tag. If you want to render the modal in your own container, you can pass a valid `Element` to the `container` prop.
 
 <Playground>
   {() => {
     const [open, setOpen] = React.useState(false);
     const myRef = React.useRef();
-
     return (
-      <div>
+      <>
         <div ref={myRef} />
-
-        <button onClick={() => setOpen(true)}>
-          Open modal
-        </button>
-
-        <Modal open={open} onClose={() => setOpen(false)} center container={myRef.current}>
+        <button className="button" onClick={() => setOpen(true)}>Open modal</button>
+        <Modal
+          open={open}
+          onClose={() => setOpen(false)}
+          center
+          container={myRef.current}
+        >
           <p>
-            Take a look with the devtools you will see that this modal is
-            rendered in a custom container.
+            Take a look with the devtools, you can see that the modal is inside
+            the div we are targeting and not at the end of the body tag.
           </p>
         </Modal>
-      </div>
+      </>
     );
-
-}}
-
+  }}
 </Playground>
