--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -9,7 +9,7 @@ import { Modal } from '../src/index.tsx';
 
 # react-responsive-modal
 
-A simple responsive and accessible react modal compatible with React 16 and ready for React 17.
+A simple responsive and accessible react modal.
 
 - Focus trap inside the modal.
 - Centered modals.
