--- a/website/src/examples/index.mdx
+++ b/website/src/examples/index.mdx
@@ -1,9 +1,5 @@
 # react-responsive-modal
 
-[![npm version](https://img.shields.io/npm/v/react-responsive-modal.svg)](https://www.npmjs.com/package/react-responsive-modal)
-[![npm downloads per month](https://img.shields.io/npm/dm/react-responsive-modal.svg)](https://www.npmjs.com/package/react-responsive-modal)
-[![codecov](https://img.shields.io/codecov/c/github/pradel/react-responsive-modal/master.svg)](https://codecov.io/gh/pradel/react-responsive-modal)
-
 A simple responsive and accessible react modal.
 
 - Focus trap inside the modal.
@@ -13,25 +9,15 @@ A simple responsive and accessible react modal.
 - Accessible modals.
 - Easily customizable via props.
 
-## Documentation
-
-- [Getting started](https://react-responsive-modal.leopradel.com/)
-  - [Installation](https://react-responsive-modal.leopradel.com/#installation)
-  - [Usage](https://react-responsive-modal.leopradel.com/#usage)
-  - [Props](https://react-responsive-modal.leopradel.com/#props)
-  - [Licence](https://react-responsive-modal.leopradel.com/#license)
-- [Examples](https://react-responsive-modal.leopradel.com/examples)
-  - [Centered modal](https://react-responsive-modal.leopradel.com/examples#centered-modal)
-  - [Multiple modal](https://react-responsive-modal.leopradel.com/examples#multiple-modal)
-  - [Custom styling](https://react-responsive-modal.leopradel.com/examples#custom-styling)
-  - [Custom animation](https://react-responsive-modal.leopradel.com/examples#custom-animation)
-  - [Custom container](https://react-responsive-modal.leopradel.com/examples#custom-container)
-
 ## Installation
 
-With npm: `npm install react-responsive-modal --save`
+Inside your project directory, install react-responsive-modal by running the following:
 
-Or with yarn: `yarn add react-responsive-modal`
+```sh
+npm install react-responsive-modal --save
+# Or with yarn
+yarn add react-responsive-modal
+```
 
 ## Usage
 
@@ -62,10 +48,22 @@ const App = () => {
 ReactDOM.render(<App />, document.getElementById('app'));
 ```
 
+- If you are using Next.js, you need to import the styles in `pages/_app.js` or `pages/_app.tsx`.
+- If you are using Create React App, you need to import the styles in `index.js` or `index.tsx`.
+
+### Multiple modals
+
+You can render multiple modals at the same time. Clicking on the overlay or pressing "esc" will only close the last modal.
+
+### Focus Trapped modal
+
+By default, when the modal open, the first focusable element will be focused. Press Tab to navigate between the focusable elements in the modal. You can notice that when the modal is open, you can't focus the elements outside of it.
+If you want to disable this behavior, set the `focusTrapped` prop to `false`.
+
 ## Props
 
-Check the documentation: https://react-responsive-modal.leopradel.com/#props.
+TODO
 
 ## License
 
-MIT © [Léo Pradel](https://www.leopradel.com/)
+react-responsive-modal is licensed under the [MIT license](https://github.com/pradel/react-responsive-modal/blob/master/LICENSE).
