--- a/website/src/docs/index.mdx
+++ b/website/src/docs/index.mdx
@@ -77,6 +77,12 @@ When a modal with a content overflowing the window size, you can scroll the cont
 By default, when the modal open, the first focusable element will be focused. Press Tab to navigate between the focusable elements in the modal. You can notice that when the modal is open, you can't focus the elements outside of it.
 If you want to disable this behavior, set the `focusTrapped` prop to `false`.
 
+<ExampleRendered name="focusTrapped" />
+
+```js file=../examples/FocusTrapped.tsx
+
+```
+
 ### Custom styling with css
 
 Customising the Modal style via css is really easy. For example if you add the following css to your app you will get the following result:
