--- a/website/src/docs/index.mdx
+++ b/website/src/docs/index.mdx
@@ -99,6 +99,12 @@ Customising the Modal style via css is really easy. For example if you add the f
 }
 ```
 
+<ExampleRendered name="customCssStyle" />
+
+```js file=../examples/CustomCssStyle.tsx
+
+```
+
 ### Custom animation
 
 If you want to change the default animation, you can do so by creating your own css animation. For example if you add the following css to your app you will get the following result:
