--- a/website/src/docs/index.mdx
+++ b/website/src/docs/index.mdx
@@ -131,11 +131,11 @@ If you want to change the default animation, you can do so by creating your own 
 
 If you want to apply a custom animation to the modal body you can do like this:
 
-### Using a custom close icon
+### Custom close icon
 
 You can customise the close icon used by the Modal by providing your own image or svg.
 
-### Using a custom container
+### Custom container
 
 By default, the Modal will be rendered at the end of the html body tag. If you want to render the Modal in your own container, you can pass your own Element to the container prop.
 
